force-app/main/default/objects/Wasserij_item__c/fields/Toeslag_bedrag_p__c.field-meta.xml
<CustomField>
    <fullName>Toeslag_bedrag_p__c</fullName>
    <formula>Totaal__c  *  Toeslag__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Toeslag bedrag %</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>