force-app/main/default/objects/Wasserij_item__c/fields/Toeslag_Regio__c.field-meta.xml
<CustomField>
    <fullName>Toeslag_Regio__c</fullName>
    <label>Toeslag Regio</label>
    <precision>7</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>