force-app/main/default/objects/Wasserij_item__c/fields/Totaal__c.field-meta.xml
<CustomField>
    <fullName>Totaal__c</fullName>
    <formula>Totale_Prijs__c +  Totaal_Extra_s__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Totaal</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>