force-app/main/default/objects/Wasserij_item__c/fields/Totaal_Extra_s__c.field-meta.xml
<CustomField>
    <fullName>Totaal_Extra_s__c</fullName>
    <description>Filled by declarative roll up helper.</description>
    <label>Totaal Extra&apos;s</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>