force-app/main/default/objects/Wasserij_item__c/fields/Totaal_incl_korting_toeslag__c.field-meta.xml
<CustomField>
    <fullName>Totaal_incl_korting_toeslag__c</fullName>
    <formula>Prijs_m__c  *  Aantal__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Totaal excl. BTW</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>