force-app/main/default/objects/Wasserij_item__c/fields/Totaal_korting__c.field-meta.xml
<CustomField>
    <fullName>Totaal_korting__c</fullName>
    <formula>Korting_bedrag__c  +  Kortingsbedrag_p__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Totaal korting</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>