force-app/main/default/objects/Wasserij_item__c/fields/Totaal_toeslag__c.field-meta.xml
<CustomField>
    <fullName>Totaal_toeslag__c</fullName>
    <formula>Toeslag_bedrag_p__c  +  Toeslag_bedrag__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Totaal toeslag</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>