force-app/main/default/objects/Wasserij_item__c/fields/Upsale__c.field-meta.xml
<CustomField>
    <fullName>Upsale__c</fullName>
    <label>Upsale?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Nee</fullName>
                <default>true</default>
                <label>Nee</label>
            </value>
            <value>
                <fullName>Vlekkenbaas</fullName>
            </value>
            <value>
                <fullName>Ontgeuren (10%)</fullName>
            </value>
            <value>
                <fullName>Anti Mot Invriezen (10%)</fullName>
            </value>
            <value>
                <fullName>Anti Allergie (10%)</fullName>
            </value>
            <value>
                <fullName>Inpakken Opslag (10%)</fullName>
            </value>
            <value>
                <fullName>Zijde Behandeling (10%)</fullName>
            </value>
            <value>
                <fullName>Waterschade (10%)</fullName>
            </value>
            <value>
                <fullName>Reparatie Rand (10%)</fullName>
            </value>
            <value>
                <fullName>Reiniging &amp; Protect (20%)</fullName>
            </value>
            <value>
                <fullName>Huisdier Compleet (20%)</fullName>
            </value>
            <value>
                <fullName>Protect &amp; Care (20%)</fullName>
            </value>
            <value>
                <fullName>Ontgeuren Overig (10%)</fullName>
            </value>
            <value>
                <fullName>Losse Kussens (10%)</fullName>
            </value>
            <value>
                <fullName>Hele Dienst/Product (10%)</fullName>
            </value>
            <value>
                <fullName>Hele Dienst - Direct uitgevoerd (15%)</fullName>
            </value>
            <value>
                <fullName>Overig (10%)</fullName>
            </value>
            <value>
                <fullName>Overig (20%)</fullName>
            </value>
            <value>
                <fullName>Ja, 10% (Invriezen)</fullName>
                <isActive>false</isActive>
                <label>Ja, 10% (Invriezen)</label>
            </value>
            <value>
                <fullName>Ja, 10% (Overig)</fullName>
                <isActive>false</isActive>
                <label>Ja, 10% (Overig)</label>
            </value>
            <value>
                <fullName>Ja, 10% (vloerkleed, meubel, ondertapijt, product)</fullName>
                <isActive>false</isActive>
                <label>Ja, 10% (vloerkleed, meubel, ondertapijt, product)</label>
            </value>
            <value>
                <fullName>Ja, 25% (Impregneren)</fullName>
                <isActive>false</isActive>
                <label>Ja, 25% (Impregneren)</label>
            </value>
            <value>
                <fullName>Ja, 25% (Ontgeuren)</fullName>
                <isActive>false</isActive>
                <label>Ja, 25% (Ontgeuren)</label>
            </value>
            <value>
                <fullName>Ja, 25% (Overig)</fullName>
                <isActive>false</isActive>
                <label>Ja, 25% (Overig)</label>
            </value>
            <value>
                <fullName>Matras Compleet (25%)</fullName>
                <isActive>false</isActive>
                <label>Matras Compleet (25%)</label>
            </value>
            <value>
                <fullName>Vezelbeschermer Eco (10%)</fullName>
                <isActive>false</isActive>
                <label>Vezelbeschermer Eco (10%)</label>
            </value>
            <value>
                <fullName>Vlekkenbehandeling (25%)</fullName>
                <isActive>false</isActive>
                <label>Vlekkenbehandeling (25%)</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>