force-app/main/default/objects/Wasserij_item__c/fields/Upsale_bedrag__c.field-meta.xml
<CustomField>
    <fullName>Upsale_bedrag__c</fullName>
    <label>Upsale bedrag</label>
    <precision>8</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>