force-app/main/default/objects/Wasserij_item__c/fields/Upsale_Opmerkingen__c.field-meta.xml
<CustomField>
    <fullName>Upsale_Opmerkingen__c</fullName>
    <label>Upsale Opmerkingen</label>
    <length>4000</length>
    <type>LongTextArea</type>
</CustomField>