force-app/main/default/objects/Wasserij_item__c/fields/Upsale_van__c.field-meta.xml
<CustomField>
    <fullName>Upsale_van__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Upsale van</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Wasserij_items</relationshipName>
    <type>Lookup</type>
</CustomField>