force-app/main/default/objects/Wasserij_item__c/fields/Verkoopprijs__c.field-meta.xml
<CustomField>
    <fullName>Verkoopprijs__c</fullName>
    <label>Verkoopprijs</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>