force-app/main/default/objects/Wasserij_item__c/fields/Voorinspectie__c.field-meta.xml
<CustomField>
    <fullName>Voorinspectie__c</fullName>
    <label>Voorinspectie</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Looppad zal zichtbaar blijven.</fullName>
                <label>Looppad zal extra behandeld worden, maar kan zichtbaar blijven.</label>
            </value>
            <value>
                <fullName>Slijtage zal zichtbaar blijven.</fullName>
                <label>Slijtage, voornamelijk door gebruik, zal zichtbaar blijven.</label>
            </value>
            <value>
                <fullName>Tapijt loopt niet recht</fullName>
            </value>
            <value>
                <fullName>Gele verkleuringen blijven zichtbaar</fullName>
            </value>
            <value>
                <fullName>Kan meer gaan pluizen.</fullName>
            </value>
            <value>
                <fullName>Diep vuil kan niet verwijderd worden</fullName>
                <label>Diep vuil kan niet verwijderd worden.</label>
            </value>
            <value>
                <fullName>Tapijt hobbelt.</fullName>
            </value>
            <value>
                <fullName>De randen aan de achterkant van het vloerkleed laat op verschillende plekken los. Dit kan door de reiniging erger worden. Wij kunnen deze opnieuw voor u lijmen.</fullName>
            </value>
            <value>
                <fullName>Slijtage gefestonneerde randen.</fullName>
            </value>
            <value>
                <fullName>Lichte slijtage door gebruik.</fullName>
            </value>
            <value>
                <fullName>Geur van de latex backing kan niet verwijderd worden.</fullName>
            </value>
            <value>
                <fullName>Getuft vloerkleed, latex backing is oorzaak poeder.</fullName>
            </value>
            <value>
                <fullName>Enkele vlekken kunnen zichtbaar blijven. Waar nodig zullen wij deze extra behandelen om tot een zo goed mogelijk resultaat te kunnen komen.</fullName>
                <label>Enkele vlekken en/of verkleuringen kunnen zichtbaar blijven. Waar nodig zullen wij deze extra behandelen om tot een zo goed mogelijk resultaat te kunnen komen.</label>
            </value>
            <value>
                <fullName>Kleuruitloop waargenomen, dit zal zichtbaar blijven.</fullName>
            </value>
            <value>
                <fullName>Geen bijzonderheden.</fullName>
            </value>
            <value>
                <fullName>Slijtage franje</fullName>
            </value>
            <value>
                <fullName>Geen garantie op vlekken en/of verkleuringen</fullName>
            </value>
            <value>
                <fullName>Pootafdrukken kunnen zichtbaar blijven</fullName>
            </value>
            <value>
                <fullName>Lichte verkleuringen zullen zichtbaar blijven</fullName>
            </value>
            <value>
                <fullName>Veel zand in het tapijt, we gaan proberen zoveel mogelijk eruit te kloppen zonder het tapijt (verder) te beschadigen.</fullName>
            </value>
            <value>
                <fullName>Sterk vervuild</fullName>
            </value>
            <value>
                <fullName>Sterke geur</fullName>
            </value>
            <value>
                <fullName>(Oude) Motschade</fullName>
            </value>
            <value>
                <fullName>Gat(en)</fullName>
            </value>
            <value>
                <fullName>Franje beschadigd</fullName>
            </value>
            <value>
                <fullName>Franje verkleurd</fullName>
            </value>
            <value>
                <fullName>Zwakke rug</fullName>
            </value>
            <value>
                <fullName>Lange zijde beschadigd</fullName>
            </value>
            <value>
                <fullName>Korte zijde beschadigd</fullName>
            </value>
            <value>
                <fullName>De huidige schade aan het tapijt kan toenemen</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>