force-app/main/default/objects/Wasserij_item__c/fields/Voorinspectie_gedaan__c.field-meta.xml
<CustomField>
    <fullName>Voorinspectie_gedaan__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Voorinspectie gedaan?</label>
    <type>Checkbox</type>
</CustomField>