force-app/main/default/objects/Wasserij_item__c/fields/Voorinspectie_Opmerkingen__c.field-meta.xml
<CustomField>
    <fullName>Voorinspectie_Opmerkingen__c</fullName>
    <label>Voorinspectie Opmerkingen</label>
    <length>20000</length>
    <type>LongTextArea</type>
</CustomField>