force-app/main/default/objects/Wasserij_item__c/fields/Voorinspectie_Reparatie_Rand_Prijs__c.field-meta.xml
<CustomField>
    <fullName>Voorinspectie_Reparatie_Rand_Prijs__c</fullName>
    <label>Voorinspectie Reparatie Rand Prijs</label>
    <precision>8</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>