force-app/main/default/objects/Wasserij_item__c/fields/Wasrapport__c.field-meta.xml
<CustomField>
    <fullName>Wasrapport__c</fullName>
    <label>Wasrapport</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>