force-app/main/default/objects/Wasserij_item__c/fields/Werk_Order__c.field-meta.xml
<CustomField>
    <fullName>Werk_Order__c</fullName>
    <label>Werk Order</label>
    <referenceTo>Werk_Order__c</referenceTo>
    <relationshipLabel>Wasserij items</relationshipLabel>
    <relationshipName>Wasserij_items</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
</CustomField>