force-app/main/default/objects/Wasserij_item__c/fields/Werk_Order_Opmerkingen__c.field-meta.xml
<CustomField>
    <fullName>Werk_Order_Opmerkingen__c</fullName>
    <formula>Werk_Order__r.Opmerkingen_255__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Werk Order - Opmerkingen</label>
    <type>Text</type>
</CustomField>