force-app/main/default/objects/Wasserij_item__c/fields/Werk_Order_Status__c.field-meta.xml
<CustomField>
    <fullName>Werk_Order_Status__c</fullName>
    <formula>TEXT(Werk_Order__r.Werk_Order_Status__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Werk Order Status</label>
    <type>Text</type>
</CustomField>