force-app/main/default/objects/Wasserij_item__c/recordTypes/SR.recordType-meta.xml
<RecordType>
    <fullName>SR</fullName>
    <active>true</active>
    <description>Gebruiken voor SR Particulier.</description>
    <label>SR Particulier</label>
</RecordType>