force-app/main/default/objects/Wasserij_item__c/recordTypes/Verhuur.recordType-meta.xml
<RecordType>
    <fullName>Verhuur</fullName>
    <active>true</active>
    <label>SofaSaver</label>
</RecordType>