force-app/main/default/objects/Wasserij_item__c/recordTypes/WI_Product.recordType-meta.xml
<RecordType>
    <fullName>WI_Product</fullName>
    <active>true</active>
    <description>Gebruik voor producten.</description>
    <label>Product</label>
</RecordType>