force-app/main/default/objects/Wasserij_item__c/recordTypes/WI_SR_Zakelijk.recordType-meta.xml
<RecordType>
    <fullName>WI_SR_Zakelijk</fullName>
    <active>true</active>
    <description>Gebruiken voor SR Zakelijk</description>
    <label>SR Zakelijk</label>
</RecordType>