force-app/main/default/objects/Wasserij_item__c/recordTypes/WI_Wasserij.recordType-meta.xml
<RecordType>
    <fullName>WI_Wasserij</fullName>
    <active>true</active>
    <description>Gebruiken voor items die in de wasserij gereinigd worden.</description>
    <label>Wasserij</label>
</RecordType>