force-app/main/default/objects/Wasserij_item__c/validationRules/Wasserij_Record_type_validation.validationRule-meta.xml
<ValidationRule>
    <fullName>Wasserij_Record_type_validation</fullName>
    <active>true</active>
    <errorConditionFormula>OR(And(RecordType.Name = &quot;SR&quot;,Werk_Order__r.RecordType.Name = &quot;Wasserij&quot;),And(RecordType.Name = &quot;Wasserij&quot;,Werk_Order__r.RecordType.Name = &quot;Uitvoering&quot;))</errorConditionFormula>
    <errorMessage>Please select the Correct Record type</errorMessage>
</ValidationRule>