force-app/main/default/objects/Wasserij_item__c/listViews/Bij_Vriezer_Loord.listView-meta.xml
<ListView>
    <fullName>Bij_Vriezer_Loord</fullName>
    <columns>NAME</columns>
    <columns>Werk_Order__c</columns>
    <columns>Item__c</columns>
    <columns>Soort__c</columns>
    <filterScope>Everything</filterScope>
    <label>Bij Vriezer / Loord</label>
</ListView>