force-app/main/default/objects/Wasserij_item__c/listViews/Brengen_naar_Vriezer.listView-meta.xml
<ListView>
    <fullName>Brengen_naar_Vriezer</fullName>
    <columns>NAME</columns>
    <columns>Werk_Order__c</columns>
    <columns>Wasrapport__c</columns>
    <columns>Item__c</columns>
    <columns>Soort__c</columns>
    <filterScope>Everything</filterScope>
    <label>Brengen Vriezer / Loord</label>
</ListView>