force-app/main/default/objects/Wasserij_item__c/listViews/Lijst_Wasserij.listView-meta.xml
<ListView>
    <fullName>Lijst_Wasserij</fullName>
    <columns>NAME</columns>
    <columns>Soort__c</columns>
    <columns>Extra_behandelingen__c</columns>
    <filterScope>Everything</filterScope>
    <label>Lijst Wasserij</label>
    <sharedTo>
        <group>Kantoor</group>
    </sharedTo>
</ListView>