force-app/main/default/objects/Wasserij_item__c/listViews/Meubels_in_behandeling.listView-meta.xml
<ListView>
    <fullName>Meubels_in_behandeling</fullName>
    <columns>NAME</columns>
    <columns>Item__c</columns>
    <columns>Soort__c</columns>
    <columns>Extra_behandelingen__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Item__c</field>
        <operation>equals</operation>
        <value>Meubel (p/zitplaats),Matras</value>
    </filters>
    <filters>
        <field>Klaar_voor_aflevering__c</field>
        <operation>equals</operation>
        <value>0</value>
    </filters>
    <label>Meubels in behandeling</label>
</ListView>