force-app/main/default/objects/Wasserij_item__c/listViews/Ondertapijten_te_maken.listView-meta.xml
<ListView>
    <fullName>Ondertapijten_te_maken</fullName>
    <columns>CREATED_DATE</columns>
    <columns>NAME</columns>
    <columns>Breedte__c</columns>
    <columns>Lengte__c</columns>
    <columns>Soort__c</columns>
    <columns>Rol_Ondertapijt__c</columns>
    <columns>Wasrapport__c</columns>
    <columns>Werk_Order__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Item__c</field>
        <operation>equals</operation>
        <value>Ondertapijt</value>
    </filters>
    <filters>
        <field>Klaar_voor_aflevering__c</field>
        <operation>equals</operation>
        <value>0</value>
    </filters>
    <label>Ondertapijten te maken</label>
</ListView>