force-app/main/default/objects/Wasserij_item__c/listViews/Ophalen_naar_Vriezer_Loord.listView-meta.xml
<ListView>
    <fullName>Ophalen_naar_Vriezer_Loord</fullName>
    <columns>NAME</columns>
    <columns>Werk_Order__c</columns>
    <columns>Item__c</columns>
    <columns>Soort__c</columns>
    <filterScope>Everything</filterScope>
    <label>Ophalen Vriezer / Loord</label>
</ListView>