force-app/main/default/objects/Wasserij_item__c/listViews/Wasserij_Item_Na_Foto_s.listView-meta.xml
<ListView>
    <fullName>Wasserij_Item_Na_Foto_s</fullName>
    <columns>NAME</columns>
    <columns>Item__c</columns>
    <columns>Soort__c</columns>
    <columns>Aantal__c</columns>
    <columns>Datum_ingepakt__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Na_foto_s_gemaakt__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <label>Wasserij Item - Na Foto&apos;s</label>
</ListView>