force-app/main/default/objects/Wasserij_item__c/listViews/Wasserij_Item_Voorinspectie_gedaan.listView-meta.xml
<ListView>
    <fullName>Wasserij_Item_Voorinspectie_gedaan</fullName>
    <columns>NAME</columns>
    <columns>Item__c</columns>
    <columns>Soort__c</columns>
    <columns>Aantal__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Voorinspectie_gedaan__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <label>Wasserij Item - Voorinspectie gedaan</label>
</ListView>